# screenmqtt

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  config.yaml
src/: msgqueue.cpp  msgqueue.h  screenmqtt.cpp
